--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,22 +13,35 @@
 </head>
 <body>
     <nav>
-       <i style="color: white;" class="bi bi-three-dots-vertical"></i>
+        <a href="#profile"><i class="bi bi-house-fill"></i></a>
+        <a href="#about"><i class="bi bi-2-circle-fill"></i></a>
+        <a href="#project"><i class="bi bi-3-square-fill"></i></a>
     </nav>
-    <section class="full-width profile">
+    
+    <section class="full-width" id="profile">
         <div class="container">
-            <h1 style="font-size: 100px;">FAIRUZ LOKMAN</h1>
-            <h2 style="font-size: 20px;"><i>Jack of all trades, master of none. Problem solving is the main quest.</i></h2>
+            <h1>FAIRUZ LOKMAN</h1>
+            <h2><i>Jack of all trades, master of none. Problem solving is the main quest.</i></h2>
         </div>
     </section>
 
-    <section class="full-width about">
+    <section class="full-width" id="about">
         <div class="container">
-
+            <h1>ABOUT ME</h1>
+            <div id="background">
+                <img id="bgdImg" src="./Assets/photo_2022-08-14_12-15-03 (3).jpg" alt="rugby">
+                <div class="overlay">
+                    <img id="logoUm" src="./Assets/logo um.png" alt="um logo">
+                    <p>Played rugby since 2012. <br> Currently open for other types of sports. <br><br> Mechanical Engineering graduate <br> from University Malaya. <br><br> Exploring the path in the world of codes. <br> On my way to become a software engineer.</p>
+                    <img id="logoInvoke" src="./Assets/invoke logo.webp" alt="invoke logo">
+                </div>
+            </div>
+            <h2 id="quote">“Masters today were starters yesterday, so begin now.”<br> ― Bernard Kelvin Clive</h2>
         </div>
     </section>
 
-    <section class="full-width project">
+    <section class="full-width" id="project">
+        <div class="title-mob"><h1>PROJECTs</h1></div>
         <div class="container">
             <div class="deco-box"><h1>PRO</h1></div>
             <div class="project-1">
