--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
             <div class="deco-box"><h1>PRO</h1></div>
             <div class="project-1">
                 <h3>Landing Page</h2>
+                <a href="https://fairuzlokman.github.io/LandingPage/assignment.html" target="_blank"><img src="./Assets/landgin.png" alt=""></a>
             </div>
             <div class="column-right">
                 <div class="project-card project-2">
                     <h3>Calculator</h2>
+                    <a href="https://fairuzlokman.github.io/Calculator/" target="_blank"><img src="./Assets/Screenshot 2022-08-15 125203.png" alt="calculator"></a>
                 </div>
                 <div class="project-card project-3">
                     <h3>To Do List</h2>
+                    <a href="https://fairuzlokman.github.io/ToDoList/index2.html"><img src="./Assets/aaaaaaaaaaaaa.png" alt="to do list"></a>
                 </div>
             </div>
             <div class="deco-box"><h1>JECTs</h1></div>
@@ -62,10 +65,17 @@
     <footer>
         <div class="container">
             <ul>
-                <li><i class="bi bi-linkedin"></i></li>
-                <li><i class="bi bi-envelope-fill"></i></li>
-                <li><i class="bi bi-telephone-fill"></i></li>
+                <a href="https://www.linkedin.com/in/fairuzlokman/" target="_blank">
+                    <li><i class="bi bi-linkedin"></i></li>
+                </a>
+                <a href="https://www.instagram.com/fairuzlokman/" target="_blank">
+                    <li><i class="bi bi-instagram"></i></li>
+                </a>
+                <a href="mailto:fairuz@invokeisdata.com" target="_blank">
+                    <li><i class="bi bi-envelope-fill"></i></li>
+                </a>
             </ul>
+            <a id="myName" href="#profile"><h2>fairuzlokman</h2></a>
         </div>
     </footer>
 </body>
