--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="https://www.linkedin.com/in/fairuzlokman/" target="_blank">
                     <li><i class="bi bi-linkedin"></i></li>
                 </a>
-                <a href="https://www.instagram.com/fairuzlokman/" target="_blank">
+                <a href="https://www.instagram.com" target="_blank">
                     <li><i class="bi bi-instagram"></i></li>
                 </a>
                 <a href="mailto:fairuz@invokeisdata.com" target="_blank">
